@@ -85,7 +85,6 @@ STRUCTURE(P1305)
   STRUCT(H2, 4)
   STRUCT(H0, 8)
   STRUCT(H1, 8)
-  STRUCT(NONCE, 16)
   STRUCT(BLOCK, 16)
   STRUCT(INDEX, 4)
 
